--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mecab-ko-dic-utf-8",
+  "name": "mecab-ko-dic",
   "version": "0.1.2",
   "description": "mecab-ko-dic in UTF-8 format - a Korean dictionary for use with Mecab.",
   "main": "index.js",
